🔧 (package.json): add "@hookform/resolvers" and "clsx" dependencies to improve form handling and class manipulation in components ✨ (package.json): add "react-router-dom" and "yup" dependencies to enable routing and form validation in the application 📝 (App.tsx): update import statements to use react-router-dom for routing 📝 (LoginPage/index.tsx): create LoginPage component and handle login form submission 📝 (Login/Login.module.scss): add styles for the login form container and form elements 📝 (Login/index.tsx): create Login component with form fields and validation 📝 (Login/types.ts): create LoginFormValues interface for login form values 📝 (Login/validation.ts): create loginSchema for form validation using Yup 📝 (index.scss): add global styles for the body element 📝 (main.tsx): wrap App component with BrowserRouter for routing

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,3 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+
+body {
+  background: #f1f1f1;
+  font-size: 16px;
+  margin: 0;
+  padding: 0;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
